2009-03-13  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#105332 - Fix desktop menu destroy bug.

	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_show_edit_menu): Hide
	instead of destroy menu on delete.

2009-03-13  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Fixes: NB#105748

2009-03-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/notification-groups.conf: Set logical string to
	tana_fi_msgs_multiple for SMS/chat messages. Fixes: NB#105391

	* debian/changelog: update

2009-03-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.16

2009-03-11  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#104709, NB#104479

	* com.nokia.HildonHome.service.in:
	* debian/hildon-home.xsession:
	* org.freedesktop.Notifications.service.in: Use dsmetool to make sure
	only one hildon-home instance is running.

	* debian/changelog: Update.

2009-03-11  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-cairo-surface-cache.c (added):
	* src/hd-cairo-surface-cache.h (added):
	* src/Makefile.am: Add HDCairoSurfaceCache.

	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_init): Use
	HDCairoSurfaceCache to cache cairo surfaces. Fixes: NB#104852

	* debian/changelog: Update.

2009-03-10  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.15

2009-03-10  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-events.c (group_activate_notifications,
	  group_window_response, group_update_window_content, group_update, ie,
	  group, notifications, preview_window_response,
	  close_led_notification, remove_from_preview_list,
	  preview_window_destroy_cb, show_preview_window,
	  hd_incoming_events_notified, hd_incoming_events_finalize): Implement
	  grouped incoming notification previews. Fixes: NB#102328

	* debian/changelog: Update.

2009-03-09  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/notification-groups.conf: Add D-Bus calls for chat-message and
	sms-message (see NB#101536).
